--- a/Task04/ManagerService/App.config
+++ b/Task04/ManagerService/App.config
@@ -4,6 +4,8 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
   <appSettings>
-    <add key="ServerPath" value="D:\\ManagerServer\\"/>
+    <add key="ServerPath" value="D:\ManagerServer\"/>
+    <add key="LogPath" value="D:\log.txt"/>
+    <add key="ManagerInfoStorage" value="D:\ManagersStorage\"/>
   </appSettings>
 </configuration>
