--- a/Task04/ManagerServiceConsole/App.config
+++ b/Task04/ManagerServiceConsole/App.config
@@ -4,6 +4,7 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
   <appSettings>
-    <add key="outputFileDirectory" value="D:\\ManagerServer\\"/>
+    <add key="outputFileDirectory" value="D:\ManagerServer\"/>
+    <add key="managerStorage" value="D:\Manager"/>
   </appSettings>
 </configuration>
