--- a/Task04/ManagerService/App.config
+++ b/Task04/ManagerService/App.config
@@ -8,4 +8,7 @@
     <add key="LogPath" value="D:\log.txt"/>
     <add key="ManagerInfoStorage" value="D:\ManagersStorage\"/>
   </appSettings>
+  <connectionStrings>
+    <add name="AppDbContext" connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename='|DataDirectory|\ManagerDb.mdf';Integrated Security=True" providerName="System.Data.SqlClient" />
+  </connectionStrings>
 </configuration>
