Fixed file name substring. changed connection string at app.config

--- a/Task04/ManagerService/App.config
+++ b/Task04/ManagerService/App.config
@@ -9,6 +9,6 @@
     <add key="ManagerInfoStorage" value="D:\ManagersStorage\"/>
   </appSettings>
   <connectionStrings>
-    <add name="AppDbContext" connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename='|DataDirectory|\ManagerDb.mdf';Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="AppDbContext" connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename='|DataDirectory|\managerStore.mdf';Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
