--- a/TestMapper/TestMapper/TestMapper.csproj
+++ b/TestMapper/TestMapper/TestMapper.csproj
@@ -56,9 +56,10 @@
     <Compile Include="DAO\Entity.cs" />
     <Compile Include="DAO\Manager.cs" />
     <Compile Include="DAO\Product.cs" />
-    <Compile Include="DTO\ManagerDto.cs" />
+    <Compile Include="DTO\PurchaseDto.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repository\GenericRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
