--- a/Task04/ManagerService/App.config
+++ b/Task04/ManagerService/App.config
@@ -1,14 +1,30 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
-    </startup>
+  <configSections>
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+  </configSections>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
+  </startup>
   <appSettings>
-    <add key="ServerPath" value="D:\ManagerServer\"/>
-    <add key="LogPath" value="D:\log.txt"/>
-    <add key="ManagerInfoStorage" value="D:\ManagersStorage\"/>
+    <add key="ServerPath" value="D:\ManagerServer\" />
+    <add key="LogPath" value="D:\log.txt" />
+    <add key="ManagerInfoStorage" value="D:\ManagersStorage\" />
   </appSettings>
   <connectionStrings>
-    <add name="AppDbContext" connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename='|DataDirectory|\managerStore.mdf';Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection"
+    providerName="System.Data.SqlClient"
+    connectionString="Data Source=(LocalDB)\v11.0;Initial Catalog=managers_2.mdf;Integrated Security=True;" />
   </connectionStrings>
+  <entityFramework>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
+      <parameters>
+        <parameter value="mssqllocaldb" />
+      </parameters>
+    </defaultConnectionFactory>
+    <providers>
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+    </providers>
+  </entityFramework>
 </configuration>
