--- a/Task04/ManagerService/ManagerService.csproj
+++ b/Task04/ManagerService/ManagerService.csproj
@@ -35,8 +35,14 @@
     <Reference Include="AutoMapper, Version=6.0.2.0, Culture=neutral, PublicKeyToken=be96cd2c38ef1005, processorArchitecture=MSIL">
       <HintPath>..\packages\AutoMapper.6.0.2\lib\net45\AutoMapper.dll</HintPath>
     </Reference>
-    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Configuration.Install" />
     <Reference Include="System.Core" />
@@ -50,14 +56,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Classes\Logger.cs" />
     <Compile Include="ManagerServiceInstaller.cs">
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="ManagerServiceInstaller.Designer.cs">
       <DependentUpon>ManagerServiceInstaller.cs</DependentUpon>
     </Compile>
-    <Compile Include="Models\ManagerDto.cs" />
-    <Compile Include="Models\ProductDto.cs" />
+    <Compile Include="Models\PurchaseDto.cs" />
     <Compile Include="Service1.cs">
       <SubType>Component</SubType>
     </Compile>
