--- a/Task04/ManagerServiceConsole/packages.config
+++ b/Task04/ManagerServiceConsole/packages.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CsvHelper" version="2.16.3.0" targetFramework="net452" />
+  <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
+  <package id="EntityFramework.SqlServerCompact" version="6.1.3" targetFramework="net452" />
   <package id="FileHelpers" version="3.1.5" targetFramework="net452" />
+  <package id="Microsoft.SqlServer.Compact" version="4.0.8876.1" targetFramework="net452" />
 </packages>
