--- a/Task04/Task04.DAL/Task04.DAL.csproj
+++ b/Task04/Task04.DAL/Task04.DAL.csproj
@@ -47,7 +47,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Context\AppDbContext.cs" />
+    <Compile Include="EF\AppDbContext.cs" />
     <Compile Include="Entities\Entity.cs" />
     <Compile Include="Entities\File.cs" />
     <Compile Include="Entities\FileStatus.cs" />
