DAL: Delete File entity, Logger: finished logic

--- a/Task04/ManagerService/App.config
+++ b/Task04/ManagerService/App.config
@@ -11,6 +11,7 @@
     <add key="ServerPath" value="D:\ManagerServer\" />
     <add key="LogPath" value="D:\log.txt" />
     <add key="ManagerInfoStorage" value="D:\ManagersStorage\" />
+    <add key="FailedFilesStorage" value="D:\FailedFilesStorage\"/>
   </appSettings>
   <connectionStrings>
     <add name="DefaultConnection"
