Divide logic to CsvDbRecorder and Logger

--- a/Task04/ManagerService/App.config
+++ b/Task04/ManagerService/App.config
@@ -14,8 +14,8 @@
   </appSettings>
   <connectionStrings>
     <add name="DefaultConnection"
-    providerName="System.Data.SqlClient"
-    connectionString="Data Source=(LocalDB)\v11.0;Initial Catalog=managers_2.mdf;Integrated Security=True;" />
+         providerName="System.Data.SqlClient"
+         connectionString="Data Source=(LocalDB)\MSSQLLocalDB;Initial Catalog=Managers;Integrated Security=True" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
