--- a/Task04/ManagerService/ManagerService.csproj
+++ b/Task04/ManagerService/ManagerService.csproj
@@ -56,6 +56,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Classes\CsvDbRecorder.cs" />
     <Compile Include="Classes\Logger.cs" />
     <Compile Include="ManagerServiceInstaller.cs">
       <SubType>Component</SubType>
