Now need to fill catch - what if file failed to proceed

--- a/Task04/ManagerService/App.config
+++ b/Task04/ManagerService/App.config
@@ -16,7 +16,7 @@
   <connectionStrings>
     <add name="DefaultConnection"
          providerName="System.Data.SqlClient"
-         connectionString="Data Source=(LocalDB)\MSSQLLocalDB;Initial Catalog=Managers;Integrated Security=True" />
+         connectionString="Data Source=(LocalDB)\MSSQLLocalDB;Initial Catalog=Managers_2;Integrated Security=True" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
