--- a/Task05_MVC/UserStore.BLL/UserStore.BLL.csproj
+++ b/Task05_MVC/UserStore.BLL/UserStore.BLL.csproj
@@ -53,11 +53,22 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DTO\UserDto.cs" />
+    <Compile Include="Infrastructure\OperationDetails.cs" />
+    <Compile Include="Interfaces\IUserService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\UserService.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\UserStore.DAL\UserStore.DAL.csproj">
+      <Project>{D59D21E4-D90E-48D3-81D5-AD8F0E179578}</Project>
+      <Name>UserStore.DAL</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
