--- a/Task05_MVC/UserStore.BLL/UserStore.BLL.csproj
+++ b/Task05_MVC/UserStore.BLL/UserStore.BLL.csproj
@@ -55,8 +55,10 @@
   <ItemGroup>
     <Compile Include="DTO\UserDto.cs" />
     <Compile Include="Infrastructure\OperationDetails.cs" />
+    <Compile Include="Interfaces\IServiceCreator.cs" />
     <Compile Include="Interfaces\IUserService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\ServiceCreator.cs" />
     <Compile Include="Services\UserService.cs" />
   </ItemGroup>
   <ItemGroup>
