--- a/Task05_MVC/UserStore.WebUI/Web.config
+++ b/Task05_MVC/UserStore.WebUI/Web.config
@@ -15,7 +15,9 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <connectionStrings>
-    <add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;Initial Catalog=IdentityUsersDb;Integrated Security=True" />
+    <add name="DefaultConnection"
+         providerName="System.Data.SqlClient"
+         connectionString="Data Source=(LocalDB)\MSSQLLocalDB;Initial Catalog=UsersStorage;Integrated Security=True" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
