--- a/Task05_MVC/UserStore.WebUI/UserStore.WebUI.csproj
+++ b/Task05_MVC/UserStore.WebUI/UserStore.WebUI.csproj
@@ -220,6 +220,8 @@
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Admin\Index.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
+    <Content Include="Views\Admin\Register.cshtml" />
+    <Content Include="Views\Admin\Edit.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
