--- a/Task05_MVC/UserStore.WebUI/UserStore.WebUI.csproj
+++ b/Task05_MVC/UserStore.WebUI/UserStore.WebUI.csproj
@@ -222,6 +222,7 @@
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Admin\Register.cshtml" />
     <Content Include="Views\Admin\Edit.cshtml" />
+    <Content Include="Views\Admin\Delete.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
