--- a/Task04/Task04.DAL/Task04.DAL.csproj
+++ b/Task04/Task04.DAL/Task04.DAL.csproj
@@ -48,11 +48,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="EF\AppDbContext.cs" />
+    <Compile Include="Entities\Client.cs" />
     <Compile Include="Entities\Entity.cs" />
     <Compile Include="Entities\Manager.cs" />
     <Compile Include="Entities\Product.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\GenericRepository.cs" />
+    <Compile Include="Repositories\SalesUnitOfWork.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
