--- a/Task05_MVC/UserStore.DAL/UserStore.DAL.csproj
+++ b/Task05_MVC/UserStore.DAL/UserStore.DAL.csproj
@@ -56,10 +56,15 @@
     <Compile Include="EF\ApplicationContext.cs" />
     <Compile Include="Entities\ApplicationRole.cs" />
     <Compile Include="Entities\ApplicationUser.cs" />
+    <Compile Include="Entities\Client.cs" />
+    <Compile Include="Entities\Entity.cs" />
+    <Compile Include="Entities\Manager.cs" />
+    <Compile Include="Entities\Product.cs" />
     <Compile Include="Identity\ApplicationRoleManager.cs" />
     <Compile Include="Identity\ApplicationUserManager.cs" />
-    <Compile Include="Interfaces\IUnitOfWork.cs" />
+    <Compile Include="Interfaces\IIdentityUnitOfWork.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\GenericRepository.cs" />
     <Compile Include="Repositories\IdentityUnitOfWork.cs" />
   </ItemGroup>
   <ItemGroup>
