--- a/Task05_MVC/UserStore.BLL/UserStore.BLL.csproj
+++ b/Task05_MVC/UserStore.BLL/UserStore.BLL.csproj
@@ -56,13 +56,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DTO\ManagerDto.cs" />
     <Compile Include="DTO\PurchaseDto.cs" />
     <Compile Include="DTO\UserDto.cs" />
     <Compile Include="Infrastructure\OperationDetails.cs" />
+    <Compile Include="Interfaces\IManagerService.cs" />
     <Compile Include="Interfaces\IPurchaseService.cs" />
     <Compile Include="Interfaces\IServiceCreator.cs" />
     <Compile Include="Interfaces\IUserService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\ManagerService.cs" />
     <Compile Include="Services\PurchaseService.cs" />
     <Compile Include="Services\ServiceCreator.cs" />
     <Compile Include="Services\UserService.cs" />
