--- a/Task05_MVC/UserStore.BLL/UserStore.BLL.csproj
+++ b/Task05_MVC/UserStore.BLL/UserStore.BLL.csproj
@@ -57,16 +57,17 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DTO\ManagerDto.cs" />
-    <Compile Include="DTO\PurchaseDto.cs" />
+    <Compile Include="DTO\OrderDto.cs" />
+    <Compile Include="DTO\ProductDto.cs" />
     <Compile Include="DTO\UserDto.cs" />
     <Compile Include="Infrastructure\OperationDetails.cs" />
     <Compile Include="Interfaces\IManagerService.cs" />
-    <Compile Include="Interfaces\IPurchaseService.cs" />
+    <Compile Include="Interfaces\IOrderService.cs" />
     <Compile Include="Interfaces\IServiceCreator.cs" />
     <Compile Include="Interfaces\IUserService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\ManagerService.cs" />
-    <Compile Include="Services\PurchaseService.cs" />
+    <Compile Include="Services\OrderService.cs" />
     <Compile Include="Services\ServiceCreator.cs" />
     <Compile Include="Services\UserService.cs" />
   </ItemGroup>
