--- a/Task05_MVC/UserStore.DAL/UserStore.DAL.csproj
+++ b/Task05_MVC/UserStore.DAL/UserStore.DAL.csproj
@@ -63,7 +63,7 @@
     <Compile Include="Entities\Order.cs" />
     <Compile Include="Identity\ApplicationRoleManager.cs" />
     <Compile Include="Identity\ApplicationUserManager.cs" />
-    <Compile Include="Interfaces\IIdentityUnitOfWork.cs" />
+    <Compile Include="Interfaces\IUnitOfWork.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\GenericRepository.cs" />
     <Compile Include="Repositories\UnitOfWork.cs" />
