--- a/Task05_MVC/UserStore.WebUI/UserStore.WebUI.csproj
+++ b/Task05_MVC/UserStore.WebUI/UserStore.WebUI.csproj
@@ -222,6 +222,7 @@
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
     <Content Include="Images\Chart.png" />
+    <Content Include="Images\Charts.png" />
     <Content Include="Images\InfoIcon.png" />
     <Content Include="Images\OrdersIcon.png" />
     <Content Include="Images\searchicon.png" />
