--- a/Task05_MVC/UserStore.WebUI/UserStore.WebUI.csproj
+++ b/Task05_MVC/UserStore.WebUI/UserStore.WebUI.csproj
@@ -205,7 +205,7 @@
     </Compile>
     <Compile Include="Models\LoginModel.cs" />
     <Compile Include="Models\ManagerViewModel.cs" />
-    <Compile Include="Models\OrderChartViewModel.cs" />
+    <Compile Include="Models\BarChartViewModel.cs" />
     <Compile Include="Models\OrderCreateModel.cs" />
     <Compile Include="Models\OrderListViewModel.cs" />
     <Compile Include="Models\RegisterModel.cs" />
