--- a/TestUpload/TestUpload/TestUpload.csproj
+++ b/TestUpload/TestUpload/TestUpload.csproj
@@ -151,8 +151,6 @@
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="favicon.ico" />
-    <Content Include="Files\SuperMan\555.JPG" />
-    <Content Include="Files\SuperMan\7858-1360x768.jpg" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
@@ -161,7 +159,6 @@
     <Content Include="ApplicationInsights.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Files\SuperMan\superfolder\download_CV.pdf" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
@@ -190,7 +187,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Files\testFolder\" />
+    <Folder Include="Files\SuperMan\superfolder\" />
     <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
