--- a/CloudBoxService/CloudBoxService/Web.config
+++ b/CloudBoxService/CloudBoxService/Web.config
@@ -8,16 +8,23 @@
   </connectionStrings>
   <appSettings>
     <add key="aspnet:UseTaskFriendlySynchronizationContext" value="true" />
+    <add key="autoFormsAuthentication" value="true"/>
   </appSettings>
   <system.web>
-    <membership>
+    <membership defaultProvider="MySqlSimpleMembershipProvider">
       <providers>
         <clear />
         <add
           name="MySqlSimpleMembershipProvider" 
           type="MySql.Web.Security.MySqlSimpleMembershipProvider,MySql.Web,Version=6.9.9.0,Culture=neutral,PublicKeyToken=c5687fc88969c44d" 
-          applicationName="CloudBoxService"
-          connectionStringName="MyConnection"
+          applicationName="CloudBoxService" 
+          description="MySQLdefaultapplication" 
+          connectionStringName="MyConnection" 
+          userTableName="UserProfile" 
+          userIdColumn="UserId" 
+          userNameColumn="UserName" 
+          autoGenerateTables="True"
+          
           enablePasswordRetrieval="false"
           enablePasswordReset="false"
           requiresQuestionAndAnswer="false"
@@ -28,6 +35,7 @@
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5"/>
   </system.web>
+  
   <system.serviceModel>
     <bindings>
       <wsHttpBinding>
