Service little fixed

--- a/CloudBoxService/CloudBoxService/Web.config
+++ b/CloudBoxService/CloudBoxService/Web.config
@@ -38,7 +38,7 @@
   <system.serviceModel>
     <bindings>
       <wsHttpBinding>
-        <binding name="MembershipBinding">
+        <binding name="MembershipBinding" maxReceivedMessageSize="2147483647">
           <security mode ="Message">
             <message clientCredentialType ="UserName"/>
           </security>
