Service updated. Now can upload files up to 20mb

--- a/CloudBoxService/CloudBoxService/Web.config
+++ b/CloudBoxService/CloudBoxService/Web.config
@@ -37,6 +37,18 @@
   
   <system.serviceModel>
     <bindings>
+      <basicHttpBinding>
+        <binding maxBufferPoolSize="2147483647"
+                 maxBufferSize="2147483647"
+                 maxReceivedMessageSize="2147483647">
+          <readerQuotas maxDepth="2147483647"
+                        maxStringContentLength="2147483647"
+                        maxArrayLength="2147483647"
+                        maxBytesPerRead="2147483647"
+                        maxNameTableCharCount="2147483647" />
+          <security mode="None" />
+        </binding>
+      </basicHttpBinding>
       <wsHttpBinding>
         <binding name="MembershipBinding" maxReceivedMessageSize="2147483647">
           <security mode ="Message">
@@ -47,8 +59,16 @@
     </bindings>
     
     <behaviors>
+      <endpointBehaviors>
+        <behavior>
+          <dataContractSerializer maxItemsInObjectGraph="2147483647" />
+        </behavior>
+      </endpointBehaviors>
+      
       <serviceBehaviors>
         <behavior name="MyServiceBehavior">
+          <serviceMetadata httpGetEnabled="true" />
+          <serviceDebug includeExceptionDetailInFaults="false" />
           <serviceCredentials>
             <userNameAuthentication
             userNamePasswordValidationMode="MembershipProvider"
